语法更新